--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/mahjong.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="南昌麻将计分器 - 快速计算麻将番数" />
-  <title>南昌麻将计分器</title>
+  <meta name="viewport" content="width=device-width, initial-scale=" 1.0" />
+  <meta name="description" content="麻将计分器 - 支持台湾16张、南昌麻将等多种玩法" />
+  <title>麻將計分器</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
