fix: fix HTML viewport syntax error

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/mahjong.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=" 1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="麻将计分器 - 支持台湾16张、南昌麻将等多种玩法" />
   <title>麻將計分器</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
